--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -85,3 +85,22 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+*::-webkit-scrollbar {
+    width: 8px;
+    margin: 2px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+    overflow: hidden;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(75, 75, 75, 0.5);
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(75, 75, 75, 1);
+}
