--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,4 +65,32 @@ body {
     background-color: var(--color-border-line);
 }
 
+a {
+    position: relative;
+    text-decoration: none;
+    color: var(--color-tertiary-text);
+    font-weight: bold;
+    transition: color 250ms ease;
+}
+
+a:hover {
+    color: var(--color-secondary-text);
+}
+
+a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-tertiary-text);
+    transform: scaleX(0%);
+    transition: transform 250ms ease;
+}
+
+a:hover::after {
+    transform: scaleX(100%);
+}
+
 /* FIXME scroller won't work in firefox */
